<resources>
    <string name="app_name">BuzzShelter</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Name</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="signed_out">Signed Out</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="welcome_user">Welcome: %s!</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="user_not_found">No user found with that e-mail!</string>
    <string name="pw_len_req">Password must be at least 6 characters!</string>
    <string name="user_create_fail">Account creation failed</string>
    <string name="user_exists">A user with that e-mail already exists!</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="user_type">User Type</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="no_account_message">No account yet?  Create one</string>
    <string name="yes_account_message">Already a member? Login</string>
    <string name="gt_logo_description">Georgia Tech Logo</string>
    <string name="forgot_password">Forgot Password?</string>

    <string name="map_api_key">AIzaSyACUTh4LKyNkAjW-hzpmpZzkgIrU8sxhZE</string>
    <string name="view_map">View Map</string>
    <string name="view_shelters">View Shelters</string>
    <string-array name="role_types">
        <item>basic</item>
        <item>employee</item>
        <item>admin</item>
    </string-array>

    <string name="search">Search</string>

    <!--Filter Conditions-->
    <string name="filter">Filter</string>
    <string name="filter_cat_gender">Gender: </string>
    <string name="filter_cat_age_range">Age Range: </string>
    <string name="filter_allow_all">Anyone</string>
    <string name="filter_newborns">Newborns</string>
    <string name="filter_children">Children</string>
    <string name="filter_young_adults">Young Adults</string>
    <string name="filter_male">Male</string>
    <string name="filter_female">Female</string>


    <!--Shelter Activity-->
    <string name="num_reservations_default">Number of Reservations</string>
    <string name="num_reservations">Number of Reservations (%d)</string>
    <string name="make_reservation">Make Reservation</string>
    <string name="cancel_reservation">Cancel Existing Reservation</string>

    <!--Individual Shelter Card-->
    <string name="shelter_name">Shelter Name: </string>
    <string name="shelter_phone">Phone Number: </string>
    <string name="show_shelter_name">Show Shelter Name</string>
    <string name="show_shelter_number">Show Number</string>


    <!--Forgot Password Activity-->
    <string name = "forgot_password_title">Enter the email you signed up with and we\'ll send
        you an email to reset your password</string>
    <string name="reset_password_button">Send Reset Link</string>

</resources>
