<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="5dp"
    card_view:contentPadding="5dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardMaxElevation="5dp"
    >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ECEFF1"
        android:padding="10dp">

        <TextView
            android:id="@+id/ShelterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shelter_name"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ShowShelterNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/show_shelter_name"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/ShelterName"
            android:layout_toEndOf="@+id/ShelterName"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp" />

        <TextView
            android:id="@+id/ShelterNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shelter_phone"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_below="@+id/ShelterName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/ShowShelterNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/show_shelter_number"
            android:textColor="#000"
            android:textSize="20sp"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_below="@+id/ShowShelterNameTextView"
            android:layout_toRightOf="@+id/ShelterNumber"
            android:layout_toEndOf="@+id/ShelterNumber" />

    </RelativeLayout>

</android.support.v7.widget.CardView>